# bodhi-rs

./: CHANGELOG.md  Cargo.toml  NEWS.md  README.md
.github/workflows/: ci.yml
examples/: comment_create.rs  create_comment.rs  create_override.rs  create_update.rs  edit_override.rs  edit_update.rs  override_create.rs  query_build.rs  query_builds.rs  query_callback.rs  query_csrf.rs  request_update.rs  user.rs  waive_update.rs
src/: client.rs  data.rs  error.rs  lib.rs  main.rs  request.rs  service.rs
src/create/: comments.rs  mod.rs  overrides.rs  releases.rs  traits.rs  updates.rs
src/data/: dates.rs  enums.rs  error.rs  mod.rs  release.rs  schemas.rs  types.rs
src/edit/: mod.rs  overrides.rs  traits.rs  updates.rs
src/error/: query.rs
src/query/: builds.rs  comments.rs  composes.rs  csrf.rs  mod.rs  overrides.rs  packages.rs  releases.rs  stacks.rs  traits.rs  updates.rs  users.rs
src/tests/: builds.rs  comments.rs  composes.rs  csrf.rs  dates.rs  enums.rs  mod.rs  overrides.rs  packages.rs  release.rs  releases.rs  stacks.rs  types.rs  updates.rs  users.rs
src/tests/query/: builds.rs  comments.rs  csrf.rs  mod.rs  overrides.rs  packages.rs  releases.rs  stacks.rs  updates.rs  users.rs
tests/: README.md  builds.rs  comments.rs  composes.rs  download_data.py  generate_tests.py  overrides.rs  packages.rs  releases.rs  updates.rs  users.rs
tests/data/: .gitignore  compress.sh
tests/templates/: builds.jinja2  overrides.jinja2  updates.jinja2
