[package]
name = "bodhi"
description = "bodhi REST API client"
license = "MIT OR Apache-2.0"

version = "0.5.5"
edition = "2018"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
categories = ["api-bindings"]
keywords = ["fedora", "bodhi", "REST", "client"]
repository = "https://github.com/ironthree/bodhi-rs"
exclude = ["/tests"]

[features]
default = ["offline-tests"]
debug = []
# feature flag for offline tests without prerequisites
offline-tests = []
# feature flag for tests requiring internet connection
online-tests = []
# feature flag for tests requiring big data files
data-tests = []

[dependencies]
chrono = { version = "^0.4.10", features = ["serde"] }
failure = "^0.1.6"
fedora = "^0.2.1"
reqwest = { version = "^0.10.0", features = ["blocking", "cookies"] }
retry = "^1.0.0"
serde = { version = "^1.0.104", features = ["derive"] }
serde_repr = "^0.1.5"
serde_json = "^1.0.44"
serde_url_params = "^0.2.0"
url = "^2.1.0"

[dev-dependencies]
# used for reading the password in examples
rpassword = "^4.0.3"

[profile.release]
codegen-units = 1
lto = true

