[package]
name = "bodhi"
description = "bodhi REST API client"
license = "MIT OR Apache-2.0"

version = "2.0.0-dev"
edition = "2021"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
exclude = ["/tests/", "/.github/", "/rustfmt.toml"]
categories = ["api-bindings"]
keywords = ["fedora", "bodhi", "REST", "client"]
repository = "https://github.com/ironthree/bodhi-rs"

[features]
default = ["offline-tests"]
# feature flag for offline tests without prerequisites
offline-tests = []
# feature flag for tests requiring internet connection
online-tests = []
# feature flag for tests requiring big data files
data-tests = []

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
fedora = "2.0.0-beta.1"
lazy_static = "1.4"
log = "0.4.13"
regex = "1.5"
serde = { version = "1.0.104", features = ["derive"] }
serde_repr = "0.1.5"
serde_json = "1.0.44"
serde_url_params = "0.2.0"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.9.0"
quickcheck = "1"
quickcheck_macros = "1"
rpassword = "5.0.0"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"

[profile.release]
codegen-units = 1
opt-level = 3

