[package]
name = "bodhi"
description = "bodhi REST API client"
license = "MIT OR Apache-2.0"

version = "2.1.1"
edition = "2021"
rust-version = "1.63.0"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
exclude = ["/tests/", "/.github/", "/rustfmt.toml"]
categories = ["api-bindings"]
keywords = ["fedora", "bodhi", "REST", "client"]
repository = "https://github.com/ironthree/bodhi-rs"

[features]
default = ["offline-tests"]
# feature flag for offline tests without prerequisites
offline-tests = []
# feature flag for tests requiring internet connection
online-tests = []
# feature flag for tests requiring big data files
data-tests = []

[dependencies]
chrono = { version = "0.4.19", features = ["std"], default-features = false }
fedora = "2.0.1"
log = "0.4.14"
once_cell = "1"
regex = "1.5.4"
serde = { version = "1.0.134", features = ["derive"] }
serde_repr = "0.1.7"
serde_json = "1.0.78"
serde_url_params = "0.2.1"
thiserror = "1.0.30"
tokio = { version = "1.14", features = ["time"] }

[dev-dependencies]
chrono = { version = "0.4.19", features = ["std", "clock"], default-features = false }
env_logger = "0.10"
quickcheck = "1"
rpassword = "5"
tokio = { version = "1.14", features = ["macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

